--- a/app/lang/lang.json
+++ b/app/lang/lang.json
@@ -46,5 +46,9 @@
     "ML_MODULE_FILEFAIL": {
         "en": "Failed to load %{file}!",
         "bp": "Erro ao carregar %{file}!"
+    },
+    "ML_PERMISSION_DENIED": {
+        "en": "You do not have permission to issue this command!",
+        "bp": "Você não tem permissão para utilizar esse comando!"
     }
 }
